# lightweight-stack

./: README.md  sql_app.db
backend/: main.py  pyproject.toml
backend/api/: crud.py
backend/db/: models.py
frontend/: package-lock.json  package.json
frontend/src/pages/: Home.tsx
sql_app/: main.py
