[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["achrysaetos <achrysaetos@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.45"
pydantic = "^1.10.4"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
